# Fraud-Detection-and-Risk-Analytics-System

./: README.md  package-lock.json  package.json
backend/: CMakeLists.txt
backend/include/: auth.h  database.h  fraud_engine.h  jwt.h  server.h
backend/src/: auth.cpp  database.cpp  fraud_engine.cpp  jwt.cpp  main.cpp  server.cpp
